<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewForgotPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:typeface="serif"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <EditText
        android:id="@+id/editTextSendEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewForgotPasswordTitle"
        android:hint="@string/email_hint"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/buttonSendEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_email"
        android:layout_below="@id/editTextSendEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewPromptBackToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textViewBackToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/dark_green"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>
</RelativeLayout>