<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="30dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintWidth_percent="0.90"
    app:layout_constraintHeight_percent="0.11"
    android:background="@drawable/rounded_popup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tag_fragment_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|top"
            android:padding="5dp"
            android:text="Create a new tag"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/spinner_container"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_marginTop="7dp"
            android:visibility="gone"
            android:background="@drawable/filter_border">
            <Spinner
                android:id="@+id/tag_filter_spinner"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:dropDownSelector="@drawable/spinner_bg"
                android:popupBackground="@drawable/spinner_bg"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="262dp"
            android:id="@+id/text_input_layout"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:counterEnabled="true"
            app:counterMaxLength="20">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tag_editable_input"
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Type a new tag name" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create_new_tag_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/green"
            android:text="Create"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/apply_new_tag_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/green"
            android:text="Apply"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tags_count_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="5dp"
            android:text="Existing tags"
            android:textSize="15sp"
            android:textStyle="bold" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tags_recycler_view"
            android:layout_width="316dp"
            android:layout_height="212dp"
            android:layout_gravity="center"
            android:background="@drawable/filter_border"
            android:outlineAmbientShadowColor="@color/black" />

        <ListView
            android:id="@+id/selected_item_list"
            android:layout_width="316dp"
            android:layout_height="230dp"
            android:layout_gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="60dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/done_create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:backgroundTint="#39B8FF"
            android:text="Done"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>