...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <ImageView
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_user"
        android:contentDescription="@string/logout"
        android:padding="20dp"
        android:clickable="true"
...

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line1"
        android:background="@color/dark_grey"
        app:layout_constraintBottom_toTopOf="@+id/search_add_container"
        app:layout_constraintTop_toBottomOf="@+id/app_header">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
...
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:background="@drawable/rounded_popup"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/create_tag_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
...
            android:foregroundGravity="center"
            android:foregroundTintMode="src_atop"
            app:backgroundTint="@color/dark_green" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/tag_action_on_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/modify_icon"
...
