<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp">

    <TextView
        android:id="@+id/tag_list_name"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:layout_height="34dp"
        android:textColor="@color/white"
        android:layout_marginStart="30dp"
        android:background="@color/green"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp" />

    <ImageView
        android:id="@+id/remove_tag_from_list"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/remove_tag_icon" />
</RelativeLayout>